Fix dark mode CSS for tabs

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -219,3 +219,12 @@ pre {
         opacity: 0;
     }
 }
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus,
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus {
+    outline: 0;
+}
