--- a/static/css/bootstrap-colors.css
+++ b/static/css/bootstrap-colors.css
@@ -35,6 +35,20 @@
     background-color:  var(--nav-pills-active-link-hover-bg);
 }
 
+.nav-tabs > li > a:hover {
+    color: var(--text-color);
+    border-color: transparent;
+}
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+    color: var(--text-color);
+    background-color: transparent;
+    border-color: var(--btn-default-border);
+    border-bottom-color: transparent;
+}
+
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
